--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnWgmCsmD8aB15p8gU5rGafZBkEtl13AM&callback=initMap"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -59,7 +60,7 @@
     <div class="container mt-2">
         <div class="row">
             <div class="col-12">
-                <div class="map"></div>
+                <div class="map" id="map"></div>
             </div>
         </div>
         <!--ETA Card-->
@@ -81,6 +82,7 @@
         </div>
     </div>
 </body>
+<script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
 </script>
